# Fluid-Sim

./: .gitignore  README.md
rust-wasm/: Cargo.toml
rust-wasm/src/: gpu_sim.rs  gpu_sim_3d.rs  lib.rs  renderer.rs
rust-wasm/www/: index.html  main.js  styles.css
