[package]
name = "fluid-wasm"
version = "0.1.0"
edition = "2024"
description = "Browser-first Rust/WASM port of the Unity fluid simulation"
license = "MIT"
repository = "https://github.com/SebLague/Fluid-Sim"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bytemuck = { version = "1.24.0", features = ["derive"] }
console_error_panic_hook = "0.1.7"
wasm-bindgen-futures = "0.4.55"
wasm-bindgen = "0.2.105"
web-sys = { version = "0.3.82", features = ["HtmlCanvasElement"] }
wgpu = "29.0.1"
